Added unit testing for TruProxyRestfulClient and tidy-up